* type=tag in=sase-api:// | bugfix to handle tag color information correctly
* type=address actions=move:DGNAME | bugfix if same object name is available on upperlevel
* type=rule actions=exporttoexcel:FILE.html,resolveAddresssummary | bugfix correction of 0.0.0.0/24 to 0.0.0.0/0
* type=address | bugfix for dynamic address-groups which are using address objects with tag filter from upper level

GENERAL:
* develop - start sase.php _ first version to use sase-api
* develop sase.xml | check also post rulebase
* introduce a new connection method "in=sase-api://"
* general | introduce argument shadow-saseapiqa for in=sase-api://


2.1.8 (20230614)
UTIL:
* type=addressgroup-/servicegroup-merger - add additional output reason if groups can not be merged
* type=userid-mgr | correct usage of objectsLocation variable
* type=rule ruletype=nat | introduce 'actions=SNAT-set-interface:INTERFACE-NAME'
* type=dhcp | introduce 'actions=dhcp-server-reservation-create:IP,mac'
* type=service actions=name-charachter-replace:SEARCH,REPLACE - new default REPLACE value is ''
* type=service 'filter=(name regex /ARGUMENTS/) - introduce variables same way as type=address 'filter=(name regex //)-  'possible variables to bring in as argument: $$current.name$$ / $$protocol$$ / $$destinationport$$ / $$soruceport$$ / $$timeout$$'
* type=service | introduce actions=timeout-halfclose-set/timeout-timewait-set & filter=(timeout-halfclose is.set/timeout-timewait is.set / timeout-halfclose.value <>=! / timeout-timewait.value >,<,=,!
* type=address | introduce 'filter=(value netmask.blank32)'

BUGFIX:
* type=appid-toolbox | bugfix for none declared variable php 8.1
* type=rule | bugfix 'filter=(dst has.recursive.from.query subquer1)' - adjust behaviour as for 'src has.recursive.from.query'
* type=address actions=move:shared | bugfix - add validation if address object has tag, that this tag must be available at target DeviceGroup